k8s/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-clusterip
spec:
  selector:
    app: helloworldapp
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
