k8s/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-loadbalancer
spec:
  selector:
    app: helloworldapp
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  clusterIP: 10.0.1.21
  type: LoadBalancer
