k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nodeport
spec:
  type: NodePort
  selector:
    app: helloworldapp
  ports:
    # The port number that the resources within the cluster will use to communucate.
    - port: 3000
    # The port number that the container is listening on.
      targetPort: 3000
    # The external port to connect to the node.
      nodePort: 30007
